--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,12 @@
   margin: 0;
 }
 
+.Chat-window {
+  border: 2px solid #333;
+  display: block;
+  height: 80vh;
+}
+
 .App-intro {
   font-size: large;
 }
