--- a/src/App.css
+++ b/src/App.css
@@ -23,12 +23,10 @@
   display: block;  
   list-style-type: none;
   margin: 0;
-  padding: 14px;
+  padding: 14px 6px;
 }
 
-.Chat-window ul.Message-list li.left-text {
-  text-align: left;
-}
+
 
 .Chat-window ul.Message-list li.left-text .bubble {
   display: inline-block;
@@ -36,6 +34,32 @@
   border-radius: 4px;
   background: white;
   max-width: 150px;
+  position: relative;
+}
+
+.bot-bubble {
+  width: 30px;
+  height: 30px;
+  background: red;
+  border-radius: 50%;
+  display: inline-block;
+  margin-right: 5px;
+  float: left;
+}
+
+
+.human-bubble {
+  width: 30px;
+  height: 30px;
+  background: green;
+  border-radius: 50%;
+  display: inline-block;
+  margin-left: 5px;
+  float: right;
+}
+
+.Chat-window ul.Message-list li.left-text {
+  text-align: left;
 }
 
 .Chat-window ul.Message-list li.right-text {
